# DuneEngine

./: .gitignore  CMakeLists.txt  DuneEngine.sln  LICENSE  README.md
DuneEngine/: DuneEngine.sln  DuneEngine.vcxproj  DuneEngine.vcxproj.filters
DuneEngine/Win32/Debug/: DuneEngine.exe.recipe  DuneEngine.ilk
DuneEngine/assets/shaders/: scanlines.glsl
DuneEngine/include/: rlgl.h
DuneEngine/shaders/: scanlines.glsl
DuneEngine/src/: Application.cpp  Application.h  Config.h  Main.cpp
DuneEngine/src/math/: MatrixMN.cpp  MatrixMN.h  Vec2.cpp  Vec2.h  VecN.cpp  VecN.h
DuneEngine/src/physics/: Constraint.cpp  Constraint.h  Force.cpp  Force.h  JointConstraint.cpp  JointConstraint.h  Particle.cpp  Particle.h  PenetrationConstraint.cpp  PenetrationConstraint.h  World.cpp  World.h
assets/: test.ldtk
src/: Game.cpp  Game.h  Logger.cpp  Logger.h  Tilemap.cpp  Tilemap.h  main.cpp
src/Assets/: AssetDatabase.cpp  AssetDatabase.h
src/Components/: AnimationComponent.h  BoxColliderComponent.h  CameraFollowComponent.h  MovementByInputComponent.h  RigidbodyComponent.h  SpriteComponent.h  TransformComponent.h
src/Core/: Camera.cpp  Camera.h
src/ECS/: Component.h  Definitions.h  Entity.cpp  Entity.h  Pool.h  Registry.cpp  Registry.h  System.cpp  System.h
src/Events/: CollisionEvent.h  KeyPressedEvent.h  KeyReleasedEvent.h
src/Game/: Game.cpp  Game.h
src/Logger/: Logger.cpp
src/Systems/: AnimationSystem.h  CameraMovementSystem.h  CollisionSystem.h  DamageSystem.h  Debug_CollisionRenderSystem.h  KeyboardMovementSystem.h  MovementSystem.h  RenderSystem.h
(+72 files in other folders)
